Try to reduce I/O in SequenceAnalysisMaintenanceTask